// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarItem should match a snapshot - Number 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <label
      class="mocked-styled-41 el-label"
    />
    <input
      aria-label="Input type number"
      class="mocked-styled-38 el-input"
      type="number"
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Radio 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <label
      class="mocked-styled-41 el-label"
    />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Select 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <label
      class="mocked-styled-41 el-label"
    />
    <mock-styled.div
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Slider 1`] = `<DocumentFragment />`;

exports[`ToolbarItem should match a snapshot - Text 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <label
      class="mocked-styled-41 el-label"
    />
    <input
      aria-label="Input type text"
      class="mocked-styled-38 el-input"
      type="text"
      value=""
    />
  </mock-styled.div>
</DocumentFragment>
`;
